<resources>
    <string name="app_name">АРМ продовца стройматериалов</string>
    <string name="preview" location="login">Добро пожаловать в АРМ продовца!\nПожалуйста, ведите учётные данные.</string>
    <string name="log" location="login">Логин:</string>
    <string name="pwd" location="login">Пароль:</string>
    <string name="btn" location="login">Войти</string>

    <string name="menu_1" location="main_menu_bar">Главное меню</string>
    <string name="menu_2" location="main_menu_bar">Склад</string>
    <string name="menu_3" location="main_menu_bar">Поступление</string>
    <string name="menu_4" location="main_menu_bar">Мой профиль</string>
    <string name="menu_5" location="main_menu_bar">Настройки приложения</string>
    <string name="title_activity_my_options">my_options</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">Настройки</string>

    <string name="DRInfo">
        Внимание! Перед тем как отправлять фотографию заявки, убедитесь, что все следующие данные указаны верно:\n
        1) ФИО продовца\n
        2) ФИО клиента и его контактные данные\n
        3) Дата обращения\n
        4) Сумма возврата и объект экспертизы\n
        5) Прикреплена копия чека\n
        6) Номер заявки соответствует номеру в приложении\n
        Помните: за ошибочно указанные данные, ровно как и их отсутствие, влекут за собой штраф!
    </string>
</resources>