<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:id="@+id/main_menu"
    tools:context=".Main_menu">

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/menu_bar_scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <HorizontalScrollView
                android:id="@+id/menu_bar_horizontal_scroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:id="@+id/menu_bar_liner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/menu_bar_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginLR"
                        android:text="@string/menu_1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h1" />

                    <TextView
                        android:id="@+id/menu_bar_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginLR"
                        android:text="@string/menu_2"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h1" />

                    <TextView
                        android:id="@+id/menu_bar_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginLR"
                        android:text="@string/menu_3"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h1" />

                    <TextView
                        android:id="@+id/menu_bar_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginLR"
                        android:text="@string/menu_4"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h1" />

                    <TextView
                        android:id="@+id/menu_bar_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginLR"
                        android:text="@string/menu_5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h1" />
                </LinearLayout>
            </HorizontalScrollView>
        </ScrollView>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/menu_material">

        </ListView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>