<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostuplenieActivity"
    android:id="@+id/postup"
    android:background="@color/blue">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ScrollView
            android:id="@+id/menu_bar_scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="none"
            tools:ignore="MissingConstraints">

            <HorizontalScrollView
                android:id="@+id/menu_bar_horizontal_scroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/menu_bar_liner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/menu_bar_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginLR"
                        android:text="@string/menu_1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h1" />

                    <TextView
                        android:id="@+id/menu_bar_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginLR"
                        android:text="@string/menu_2"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h1" />

                    <TextView
                        android:id="@+id/menu_bar_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginLR"
                        android:text="@string/menu_3"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h1" />

                    <TextView
                        android:id="@+id/menu_bar_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginLR"
                        android:text="@string/menu_4"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h1" />

                    <TextView
                        android:id="@+id/menu_bar_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginLR"
                        android:text="@string/menu_5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h1" />
                </LinearLayout>
            </HorizontalScrollView>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/spirit">

            <ListView
                android:id="@+id/lv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/button8"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:divider="@drawable/empty_tall_divider"
                android:scrollbars="none">


            </ListView>

            <Button
                android:id="@+id/button8"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="Добавить поступление"
                android:backgroundTint="@color/btn"/>
        </RelativeLayout>




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>