<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MyProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/menu_bar_scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="none"
            tools:ignore="MissingConstraints">

            <HorizontalScrollView
                android:id="@+id/menu_bar_horizontal_scroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/menu_bar_liner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/menu_bar_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginLR"
                        android:text="@string/menu_1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h1" />

                    <TextView
                        android:id="@+id/menu_bar_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginLR"
                        android:text="@string/menu_2"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h1" />

                    <TextView
                        android:id="@+id/menu_bar_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginLR"
                        android:text="@string/menu_3"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h1" />

                    <TextView
                        android:id="@+id/menu_bar_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginLR"
                        android:text="@string/menu_4"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h1" />

                    <TextView
                        android:id="@+id/menu_bar_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginLR"
                        android:text="@string/menu_5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h1" />
                </LinearLayout>
            </HorizontalScrollView>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:backgroundTint="@color/spirit">


            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="200dp"
                android:layout_height="130dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                tools:srcCompat="@tools:sample/avatars"
                android:backgroundTint="@color/spirit"/>

            <TextView
                android:id="@+id/myInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imageView11"
                android:text="TextView"
                android:backgroundTint="@color/spirit"/>

            <ListView
                android:id="@+id/lvMy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/imageView11"
                android:layout_marginTop="@dimen/marginLR"
                android:divider="@drawable/empty_tall_divider"
                android:backgroundTint="@color/spirit">

            </ListView>


        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>